# 0-project

./: .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/application/dto/: bunker.py
app/application/interactors/: create_bunker.py  transaction_manager.py
app/application/interactors/bunker/: create_bunker.py  depends.py  get_bunker.py  get_bunker_list.py  update_max_volume.py
app/application/interfaces/: bunker.py  uuid_generator.py
app/config/: app.py  constants.py  database.py  logging.py  settings.py  types.py
app/controllers/api/: __init__.py
app/controllers/api/v1/: __init__.py  bunker.py
app/controllers/schemas/: bunker.py
app/domain/: constants.py  entities.py  value_objects.py
app/infra/: database.py  exceptions.py
app/infra/gateways/: bunker.py
app/infra/migrations/: env.py
app/infra/migrations/versions/: 2026_03_09_1003-a91283d4e5be_init.py  2026_03_09_1621-9965c117ae22_init_citext_ext.py  2026_03_09_1637-aed3a3317805_add_column_name_into_bunker.py
app/infra/models/: __init__.py  base.py  bunker.py
app/ioc/: app.py
pg-init-scripts/: create-schemas.sql
