[project]
name = "0-project"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]

[tool.ruff]
fix = true
unsafe-fixes = true
exclude = [".venv"]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]

[tool.ruff.lint.isort]
case-sensitive = false
