[project]
name = "0-project"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "black>=26.3.0",
    "dishka>=1.9.1",
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]

[tool.ruff]
fix = true
unsafe-fixes = true
src = ["app"]
exclude = [".venv"]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.extend-per-file-ignores]
"**/__init__.py" = [
    "PLC0414", # useless-import-alias (PLC0414)
]
"app/infra/migrations/versions/**.py" = [
    "N999"
]


[tool.mypy]
# Включает все проверки --strict
strict = true

# Подключаем плагин Pydantic
plugins = [
    "pydantic.mypy",
]

# Улучшаем читаемость вывода (опционально)
pretty = true
show_error_codes = true

[tool.pydantic-mypy]
# Проверять типы в __init__ (без этого аргументы будут Any)
init_typed = true

# Выдавать ошибку за лишние аргументы в __init__, даже если в модели нет extra="forbid"
init_forbid_extra = true

# Ругаться на использование полей без аннотации типа
warn_untyped_fields = true

# Проверять динамические алиасы (если используются)
warn_required_dynamic_aliases = true
